changed favicon to png

--- a/resource/index.html
+++ b/resource/index.html
@@ -2,17 +2,18 @@
 <html lang="de">
 
 	<head>
-	  <meta charset="utf-8">
-	  <meta http-equiv="x-ua-compatible" content="ie=edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	  <title>Grillthermometer</title>
+		<title>Grillthermometer</title>
 
-	  <link rel="icon" href="/favicon.ico">
-	  
-	  <style>
-	  
-	  </style>
+		<link rel="shortcut icon" href="/favicon.png">
+		<link rel="icon" type="image/png" href="/favicon.png" sizes="256x256">
+		  
+		<style>
+		  
+		</style>
 	  
 	</head>
 	<body>
