--- a/resource/index.html
+++ b/resource/index.html
@@ -30,6 +30,18 @@
 			#tempTarget li {
 				margin: 3px 0px;
 			}
+		 	canvas{
+				-moz-user-select: none;
+				-webkit-user-select: none;
+				-ms-user-select: none;
+			}
+			 #chart{
+			 	width: 100%;
+    			height: 100%;
+			 }
+			 .jumbotron{
+				 padding: 1rem;
+			 }
 		 </style>
 		  
 	</head>
@@ -53,15 +65,15 @@
 		   <div class="row">
 				<div class="col-sm-6">
 					<hr>
-					<h2>Temps</h2>
+					<h2>Temperature</h2>
 					<ul id="tempTarget" class="jumbotron"></ul>
 				</div>
 
 				<div class="col-sm-6">
 					<hr>
-					<h2>Stats</h2>
+					<h2>History</h2>
 					<div class="jumbotron">
-						<p>todo</p>
+						<canvas id="chart"></canvas>
 					</div>
 				</div>
 				<div class="col-12">
@@ -81,24 +93,26 @@
 		</div> <!-- /container -->
 		
 		<script src="/jquery.js"></script>
+		<script src="/chart.js"></script>
+		
 		
 		<script>
 		
-		var lastResponse;
+		//for debug
+		var lastResponse = false;
 		
 		function updateTemps(){
 			$.get( "/getTemps", function( response ) {
-				if(response.read){
 					$("#warn-no-connection").hide();
 					lastResponse = response;
 					var html = "";
-					for (var channel in response.temps) {
-						html += "<li>Kanal " + channel + ": <strong>" + response.temps[channel] + "</strong></li>";
-					}
+					$.each(response.channels, function (key, data) {
+						html += "<li>Kanal " + data.name + ": <strong>" + data.temperature + "</strong></li>";
+					});
+					updateChart(response);
 					$("#tempTarget").html(html);
 					var bat = Math.min(response.battery, 100) + "%";
 					$("#battery").width(bat).text(bat);
-				}
 			}).fail(function() {
 				$("#warn-no-connection").show();
 			});
@@ -106,6 +120,102 @@
 		
 		updateTemps();
 		setInterval(updateTemps, 10000);
+			
+		/* ----- CHART ------- */	
+		window.chartColors = {
+			red: 'rgb(255, 99, 132)',
+			orange: 'rgb(255, 159, 64)',
+			yellow: 'rgb(255, 205, 86)',
+			green: 'rgb(75, 192, 192)',
+			blue: 'rgb(54, 162, 235)',
+			purple: 'rgb(153, 102, 255)',
+			grey: 'rgb(201, 203, 207)'
+		};
+		var colorNames = Object.keys(window.chartColors);
+		
+		var config = {
+			type: 'line',
+			animation: false,
+			data: {
+				datasets: []
+			},
+			options: {
+				elements: { 
+					point: { 
+						radius: 0 
+					} 
+				},
+				animation: {
+					duration: 0
+				},
+				responsive: true,
+				tooltips: {
+					mode: 'index',
+					intersect: false,
+				},
+				hover: {
+					mode: 'nearest',
+					intersect: true
+				},
+				scales: {
+					xAxes: [{
+						display: true,
+						scaleLabel: {
+							display: false,
+							labelString: 'Time'
+						}
+					}],
+					yAxes: [{
+						display: true,
+						scaleLabel: {
+							display: true,
+							labelString: 'Temperature'
+						},
+						ticks: {
+							suggestedMin: 10,
+							suggestedMax: 150,
+						}
+					}]
+				}
+			}
+		};
+			
+			
+		function updateChart(response){
+	
+			config.data.datasets = [];
+			config.data.labels = [];
+			
+			for(i = 0; i < response.channels[0].history.length; i++) {
+				  config.data.labels.push("");
+			};
+			
+			$.each(response.channels, function (key, data) {
+
+				var colorName = colorNames[config.data.datasets.length % colorNames.length];
+				var newColor = window.chartColors[colorName];
+				var newDataset = {
+					label: data.name,
+					backgroundColor: newColor,
+					borderColor: newColor,
+					data: data.history,
+					fill: false
+				};
+			
+				config.data.datasets.push(newDataset);
+
+			});
+				
+		 	window.myLine.update();
+			
+		}
+			
+		window.onload = function() {
+            var ctx = document.getElementById("chart").getContext('2d');
+            window.myLine = new Chart(ctx, config);
+        };
+			
+			
 		
 		</script>
 	</body>
